[project]
name = "zigchad"
version = "0.1.4"
description = "Download your Zig versions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[tool.rye]
dev-dependencies = [
    "ruff>=0.13.3",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
